# bitsi

./: .gitignore  P1_PAPER.txt  P2_PAPER.txt  P3_PAPER.txt  P4_PAPER.txt  PAPER_PLAN.txt  README_multi_category.md  batch_process_all_classes.py  batch_shapenetpart_segmentation.py  combined_segments_pointcloud.ply  download_datasets.py  download_via_proxy.sh  main.py  main_multi_category.py  run_batch_processing.py  test_transform_undo.py  verify_segmentation_results.py
bitsi_sim/: README.md  __init__.py  config.py  demo_grasp.py  geometry.py  grasp_eval.py  grasp_sampler.py  gripper.py  mesh_utils.py  recorder.py  requirements.txt  world.py
bitsi_slicer/: pyproject.toml
bitsi_slicer/bitsi_slicer/: __init__.py  occupancy.py  point_cloud.py  slicing.py
